[package]
edition = "2024"
name = "loongarch_vcpu"
version = "0.1.0"
authors = [
    "ZuJun Xie <zujunxie1@gmail.com>",
]
description = "loongarch VCPU implementation for Arceos Hypervisor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/numpy1314/loongarch_vcpu"
categories = ["embedded", "no-std"]
keywords = ["hypervisor", "loongarch", "vcpu"]


[dependencies]
log = "0.4"
spin = "0.10"

numeric-enum-macro = "0.2"
tock-registers = "0.9"

axerrno = "0.1.0"
percpu = {version = "0.2.0"}

axaddrspace = {git = "https://github.com/arceos-hypervisor/axaddrspace.git"}
axdevice_base = {git = "https://github.com/arceos-hypervisor/axdevice_crates.git"}
axvcpu = {git = "https://github.com/arceos-hypervisor/axvcpu.git"}
axvisor_api = {git = "https://github.com/arceos-hypervisor/axvisor_api.git"}